# STT

./: .gitignore  CMakeLists-ExternalProjects.txt  CMakeLists.txt  contributors.txt  source_code_documentation  source_formatting
caffe_model/: counting_deploy.prototxt  counting_model.prototxt  counting_model1.prototxt  counting_solver.prototxt
doc/: STTProject.vpp  STTProject.vpp.bak_000f  STTProject.vpp.bak_001d  STTProject.vpp.bak_002d  STTProject.vpp.bak_003d  STTProject.vpp.bak_004d  STTProject.vpp.bak_005d  STTProject.vpp.bak_006d  STTProject.vux
doc/html/: annotated.html  classes.html  classstt_1_1AudioFormat-members.html  classstt_1_1AudioFormat.html  classstt_1_1DFT-members.html  classstt_1_1DFT.html  classstt_1_1DeltaEnergy-members.html  classstt_1_1DeltaEnergy.html  classstt_1_1DeltasCepstrum-members.html  classstt_1_1DeltasCepstrum.html  classstt_1_1DigitalSignalProcessing-members.html  classstt_1_1DigitalSignalProcessing.html  classstt_1_1DoubleDeltaEnergy-members.html  classstt_1_1DoubleDeltaEnergy.html  classstt_1_1DoubleDeltasCepstrum-members.html  classstt_1_1DoubleDeltasCepstrum.html  classstt_1_1Energy-members.html  classstt_1_1Energy.html  classstt_1_1SoundRecorder-members.html  classstt_1_1SoundRecorder.html  classstt_1_1Window-members.html  classstt_1_1Window.html  delta__energy_8h_source.html  deltas__cepstrum_8h_source.html  dft_8h_source.html  digital__signal__processing_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  double__delta__energy_8h_source.html  double__deltas__cepstrum_8h_source.html  energy_8h_source.html  files.html  index.html  namespaces.html  namespacestt.html  sound__recorder_8h_source.html  stt__common_8h_source.html  window_8h_source.html
doc/html/search/: all_1.js  all_2.js  all_3.js  (+5 more)
notes/: labels.txt
src/: CMakeLists.txt  acoustic_model.cpp  acoustic_model.hpp  activation_functions.cpp  activation_functions.hpp  audiopreprocessor.cpp  audiopreprocessor.hpp  backward_likelihood.cpp  backward_likelihood.hpp  baum_welch.cpp  baum_welch.hpp  best_hidden_state_sequence.cpp  best_hidden_state_sequence.hpp  classifier.cpp  classifier.hpp  code_book.cpp  code_book.hpp  database.cpp  database.hpp  decoder.hpp  dsp_math.cpp  dsp_math.hpp  feature_extractor.cpp  feature_extractor.hpp  filter_bank.cpp  filter_bank.hpp  forced_viterbi.cpp  forced_viterbi.hpp  forward_likelihood.cpp  forward_likelihood.hpp  fps.cpp  fps.hpp  hidden_markov_model.cpp  hidden_markov_model.hpp  hmm_trainer.cpp  hmm_trainer.hpp  interval.hpp  kmeans.cpp  kmeans.hpp  language_model.hpp  (+35 more)
test/: CMakeLists.txt  acoustic_model_test.cpp  any_db_test.cpp  audiopreprocessor_test.cpp  backward_likelihood_test.cpp  best_hidden_state_sequence_test.cpp  binding_test.cpp  boost_serialization_test.cpp  caffetest_test.cpp  classification_test.cpp  decoding_test.cpp  discretecosinetransformation_test.cpp  eff_test.cpp  feature_extraction_test.cpp  fft_test.cpp  filter_bank_test.cpp  forced_viterbi_test.cpp  forward_likelihood_test.cpp  fps_test.cpp  hidden_markov_model_test.cpp  hmm_trainer_test.cpp  kmeans_test.cpp  language_model_test.cpp  likelihood_test.cpp  lmdatabase_test.cpp  lmdb_test.cpp  lmdb_wrapper_test.cpp  matrix_test.cpp  mfcc_test.cpp  mlp_test.cpp  neural_net_training_test.cpp  ngrams_test.cpp  nnet_with_decoding_test.cpp  phonetics_test.cpp  rnn_test.cpp  searchncount_test.cpp  sentence_breaker_test.cpp  serialization_with_lmdb_test.cpp  sound_recorder_playback_test.cpp  sound_recorder_test.cpp  (+11 more)
